<resources>
    <string name="app_name">EdMotors</string>
    <string name="txtlogin">Login:</string>
    <string name="txtCpf">CPF:</string>
    <string name="txtTel">Telefone:</string>
    <string name="txtSenha">Senha:</string>
    <string name="txtNome">Nome Completo:</string>
    <string name="txtCadastrar">Cadastrar</string>
    <string name="txtCadastro">Cadastrar</string>
    <string name="txtWelcome">SEJA BEM VINDO AO</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtTelaCadastro">Cadastro</string>
    <string name="txtInicio">Inicio</string>
    <string name="txtValores">Valores</string>
    <string name="txtConvenio">Convênio</string>
    <string name="txtIncorreta">Senha Incorreta</string>
    <string name="txtPagamentos">Selecione a Forma de Pagamento</string>
    <string name="txtCartao">Crédito/Débito</string>
    <string name="txtPix">Pix</string>
    <string name="txtBoleto">Boleto</string>
    <string name="codCartao">Código do Cartão</string>
    <string name="codSeguranca">Código de Segurança</string>
    <string name="txtAvancar">Avançar</string>
    <string name="txtManutencao">Tente novamente mais tarte, está função está temporariamente desativada</string>
</resources>