<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8AD0F1"
    tools:context=".ValoresActivity">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autoText="true"
        android:background="#080861"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button12" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:autoText="true"
        android:background="#080861"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="114dp"
        android:layout_marginTop="153dp"
        android:text="Veículo PequenO R$13,00"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="145dp"
        android:text="VEÍCULO MÉDIO R$15,00"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginBottom="216dp"
        android:text="VEÍCULO GRANDE R$18,00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="116dp"
        android:layout_height="0dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:text="MOTOS          R$10,00"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="73dp"
        android:autoText="true"
        android:gravity="center"
        android:text="OS VALORES MOSTRADOS SÃO APENAS PARA PRIMEIRA MEIA HORA PASSADO DISSO É COBRADO R$ 3,00 POR HORA DE MOTOS E R$ 4,00 DE CARROS QUALQUER PORTE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:autoText="true"
        android:background="#080861"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInicio"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtValores"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/txtConvenio"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="470dp"
        android:fontFamily="serif"
        android:text="@string/txtValores"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>